# unsupervised-papers-data-gui

./: README.md  package-lock.json  package.json
src/: App.vue  main.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
src/assets/: styles.css
src/components/: ItemEditor.vue  ItemList.vue  LinkField.vue  LinkListField.vue  Settings.vue
src/store/: index.js
